Opus sonar fixes.