@@ -61,13 +61,8 @@ public class PermissionEvaluationService {
         long startTime = System.currentTimeMillis();
         
         try {
-            // 1. Check cache first
+            // 1. Generate cache key for later storage (Spring @Cacheable handles lookup)
             String cacheKey = generateCacheKey(userId, permissionKey, resourceId);
-            PermissionCacheEntry cached = getFromCache(cacheKey);
-//            if (cached != null && !cached.isExpired()) {
-//                log.debug("Permission check cache hit for user {}: {}", userId, permissionKey);
-//                return cached.isAllowed();
-//            }
 
             // 2. Validate inputs
             User user = userRepository.findById(userId)
@@ -79,7 +74,7 @@ public class PermissionEvaluationService {
             }
 
             // 3. Check role hierarchy permissions
-            boolean hasPermission = checkRoleBasedPermissions(user, permissionKey, resourceId);
+            boolean hasPermission = checkRoleBasedPermissions(user, permissionKey);
             
             // 4. Check explicit permission grants/revokes
             if (!hasPermission) {
@@ -88,7 +83,7 @@ public class PermissionEvaluationService {
             
             // 5. Check team-based permissions if resource is project-scoped
             if (!hasPermission && resourceId != null) {
-                hasPermission = checkTeamPermissions(userId, permissionKey, resourceId);
+                hasPermission = checkTeamPermissions(userId, resourceId);
             }
 
             // 6. Cache result
@@ -137,7 +132,7 @@ public class PermissionEvaluationService {
                     .stream()
                     .filter(change -> change.getUserId().equals(userId))
                     .filter(change -> resourceId == null || Objects.equals(change.getResourceId(), resourceId))
-                    .collect(Collectors.toList());
+                    .toList();
             
             for (PermissionChange change : activeChanges) {
                 if (change.getChangeType() == PermissionChange.ChangeType.GRANT ||
@@ -213,7 +208,7 @@ public class PermissionEvaluationService {
 
     // Private helper methods
 
-    private boolean checkRoleBasedPermissions(User user, String permissionKey, UUID resourceId) {
+    private boolean checkRoleBasedPermissions(User user, String permissionKey) {
         UserRole userRole = user.getGlobalRole();
         
         // Parse permission key to get resource and action
@@ -274,7 +269,7 @@ public class PermissionEvaluationService {
                 .filter(change -> change.getUserId().equals(userId))
                 .filter(change -> change.getPermissionKey().equals(permissionKey))
                 .filter(change -> resourceId == null || Objects.equals(change.getResourceId(), resourceId))
-                .collect(Collectors.toList());
+                .toList();
 
         // If multiple changes exist, the most recent one takes precedence
         if (!activeChanges.isEmpty()) {
@@ -291,20 +286,17 @@ public class PermissionEvaluationService {
         return false;
     }
 
-    private boolean checkTeamPermissions(UUID userId, String permissionKey, UUID resourceId) {
+    private boolean checkTeamPermissions(UUID userId, UUID resourceId) {
         // Check if user is member of any team associated with the resource
         List<TeamMember> teamMemberships = teamMemberRepository
                 .findByUserIdAndStatus(userId, TeamMember.TeamMemberStatus.ACTIVE);
         
         for (TeamMember membership : teamMemberships) {
             Team team = teamRepository.findById(membership.getTeamId()).orElse(null);
-            if (team != null && team.getProjectId() != null && 
-                team.getProjectId().equals(resourceId) && team.isActive()) {
-                
-                // Check team role permissions
-                if (membership.canEdit() || membership.canManage()) {
-                    return true;
-                }
+            if (team != null && team.getProjectId() != null &&
+                team.getProjectId().equals(resourceId) && team.isActive() &&
+                (membership.canEdit() || membership.canManage())) {
+                return true;
             }
         }
         
@@ -315,33 +307,27 @@ public class PermissionEvaluationService {
         Set<String> permissions = new HashSet<>();
         
         switch (role) {
-            case OWNER:
-                permissions.addAll(Arrays.asList(
-                        "user.*", "project.*", "team.*", "task.*", "review.*", "requirement.*", "role.*"
-                ));
-                break;
-            case ADMINISTRATOR:
-                permissions.addAll(Arrays.asList(
-                        "user.read", "user.update", "user.manage",
-                        "project.read", "project.update", "project.create",
-                        "team.read", "team.manage", "team.invite",
-                        "task.read", "task.assign", "task.manage",
-                        "requirement.read", "requirement.update", "requirement.create",
-                        "review.read", "review.conduct"
-                ));
-                break;
-            case USER:
-            case DEVELOPER:
-                permissions.addAll(Arrays.asList(
-                        "project.read",
-                        "requirement.read", "requirement.create", "requirement.update",
-                        "task.read", "task.complete", "task.update",
-                        "team.participate",
-                        "review.read", "review.conduct"
-                ));
-                break;
-            default:
-                break;
+            case OWNER -> permissions.addAll(Arrays.asList(
+                    "user.*", "project.*", "team.*", "task.*", "review.*", "requirement.*", "role.*"
+            ));
+            case ADMINISTRATOR -> permissions.addAll(Arrays.asList(
+                    "user.read", "user.update", "user.manage",
+                    "project.read", "project.update", "project.create",
+                    "team.read", "team.manage", "team.invite",
+                    "task.read", "task.assign", "task.manage",
+                    "requirement.read", "requirement.update", "requirement.create",
+                    "review.read", "review.conduct"
+            ));
+            case USER, DEVELOPER -> permissions.addAll(Arrays.asList(
+                    "project.read",
+                    "requirement.read", "requirement.create", "requirement.update",
+                    "task.read", "task.complete", "task.update",
+                    "team.participate",
+                    "review.read", "review.conduct"
+            ));
+            default -> {
+                // No additional permissions
+            }
         }
         
         return permissions;
@@ -351,22 +337,15 @@ public class PermissionEvaluationService {
         Set<String> permissions = new HashSet<>();
         
         switch (teamRole) {
-            case OWNER:
-            case ADMIN:
-                permissions.addAll(Arrays.asList(
-                        "team.manage", "team.invite", "team.remove",
-                        "task.assign", "task.manage"
-                ));
-                break;
-            case MEMBER:
-                permissions.addAll(Arrays.asList(
-                        "team.participate",
-                        "task.complete", "task.update"
-                ));
-                break;
-            case VIEWER:
-                permissions.add("team.participate");
-                break;
+            case OWNER, ADMIN -> permissions.addAll(Arrays.asList(
+                    "team.manage", "team.invite", "team.remove",
+                    "task.assign", "task.manage"
+            ));
+            case MEMBER -> permissions.addAll(Arrays.asList(
+                    "team.participate",
+                    "task.complete", "task.update"
+            ));
+            case VIEWER -> permissions.add("team.participate");
         }
         
         return permissions;
